environments/prod/nextcloud/service.nextcloud-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: external-resources
  annotations:
    avp.kubernetes.io/path: "argocd/data/argocd-vault-plugin/nextcloud"
spec:
  type: ExternalName
  externalName: <path:argocd/data/argocd-vault-plugin/nextcloud#nextcloud-internal-url>
  ports:
  - port: 30027
    targetPort: 30027


---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-external
  namespace: external-resources
  annotations:
    avp.kubernetes.io/path: "argocd/data/argocd-vault-plugin/truenas"
subsets:
  - addresses:
      - ip: <path:argocd/data/argocd-vault-plugin/truenas#truenas-ip>
    ports:
      - port: 30027


---
# nextcloud Service
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: external-resources
  annotations:
    avp.kubernetes.io/path: "argocd/data/argocd-vault-plugin/nextcloud"
spec:
  type: ExternalName
  externalName: <path:argocd/data/argocd-vault-plugin/nextcloud#nextcloud-internal-url>  #nextcloud-internal-url
  ports:
  - port: 8443
    targetPort: 8443
    protocol: TCP
    name: https

---
# Nextcloud Service
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: external-resources
  annotations:
    avp.kubernetes.io/path: "argocd/data/argocd-vault-plugin/nextcloud"
spec:
  type: ExternalName
  externalName: <path:argocd/data/argocd-vault-plugin/nextcloud#nextcloud-internal-url>  #nextcloud-internal-url
  ports:
  - port: 30027
    targetPort: 30027
    protocol: TCP
    name: http
---
# Nextcloud Service with explicit IP
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external-ip
  namespace: external-resources
spec:
  ports:
  - port: 30027
    targetPort: 30027
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-external-ip
  namespace: external-resources
subsets:
- addresses:
  - ip: 10.0.0.200
  ports:
  - port: 30027
    name: http
---
